--- a/eeng0090_Ohms_Law/eeng0091_Ohms_Law_V001.ipynb
+++ b/eeng0090_Ohms_Law/eeng0091_Ohms_Law_V001.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b99fd871-f652-4023-be61-024d4feb2e9b",
+   "metadata": {},
+   "source": [
+    "# Ohm's Law - Experiments"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "aa06c3f7-731f-4eb4-9ee5-3f08e7dbab95",
    "metadata": {},
    "outputs": [],
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "fd31b40b-1149-4480-a5f5-3979bd414899",
    "metadata": {},
    "outputs": [],
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "be12b015-0b34-4471-a1bf-f4a3e5447d8c",
    "metadata": {},
    "outputs": [
@@ -225,7 +233,7 @@
        "10.000  22  1001.0  10010.0000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8e0587c8-e30c-4398-89ac-70fa3b6396e7",
    "metadata": {},
    "outputs": [],
@@ -260,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "43e2cb9a-9bc6-4b10-88c5-82828eb2e5d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a87d2a5584e415da9afa97a09b5d0cf",
+       "model_id": "1815c331170149859e20e30acd36eae5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,7 +283,7 @@
        "interactive(children=(IntSlider(value=20, description='I0', min=-100), IntSlider(value=110, description='G', m…"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "1b14dca5-ac2a-42a3-abae-d83a09f6979a",
    "metadata": {},
    "outputs": [],
@@ -311,7 +319,7 @@
     "    Imodel=I0+G*Vset\n",
     "    DIrms=np.mean(np.sqrt(((Imeas-Imodel)**2)))\n",
     "    \n",
-    "    ax2.text(0, 800, f'Error functional J={DIrms:.2f}', fontsize=15)\n",
+    "    ax2.text(0, 800, f'Mean Square Error = {DIrms:.2f}', fontsize=15)\n",
     "    \n",
     "    Imeas.plot(ax=ax2, style=\"x\", label=\"measurements\")\n",
     "    \n",
@@ -335,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "9557266b-45fd-4495-94b5-2fd763f5c61f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee3d43d1509d425ba31b280ab5da2f91",
+       "model_id": "6d2876a082944817b13b633470a80be8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +358,7 @@
        "interactive(children=(IntSlider(value=100, description='I0', max=120, min=-120), IntSlider(value=80, descripti…"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
