--- a/eeng0080_Linear_Equation_Systems/eeng0081_LES_V002.ipynb
+++ b/eeng0080_Linear_Equation_Systems/eeng0081_LES_V002.ipynb
@@ -1330,8 +1330,7 @@
     "I_1 \\\\\n",
     "I_2 \\\\\n",
     "I_3 \\\\\n",
-    "\\end{array}\\right)\n",
-    "=\n",
+    "\\end{array}\\right) =\n",
     "\\left(\\begin{array}{c}\n",
     "3.5 \\\\\n",
     "-1 \\\\\n",
