--- a/eeng0090_Ohms_Law/eeng0091_Ohms_Law_V002.ipynb
+++ b/eeng0090_Ohms_Law/eeng0091_Ohms_Law_V002.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1b14dca5-ac2a-42a3-abae-d83a09f6979a",
    "metadata": {},
    "outputs": [],
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9557266b-45fd-4495-94b5-2fd763f5c61f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "275b5d5a44504809ad37d2218021e7f4",
+       "model_id": "a7667a9ee7e944f183b68eb21169b89f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,7 +189,7 @@
        "interactive(children=(IntSlider(value=100, description='I01', max=140, min=-140), IntSlider(value=80, descript…"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "f4825569-b681-46a8-83a8-4d0af77c42e9",
    "metadata": {
     "tags": []
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ad6f5db7-aa53-4320-b316-3a3af4661b13",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "1.51    92.30  139.19"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "911ac256-8b66-43ce-9cdc-b9be887634cc",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
     "    ax2.plot([Vset2, Vset2],[Imodel2,Imeas2],\"k-\")\n",
     "    \n",
     "    ax2.set_xlabel(r\"Voltage $V$ in V\")\n",
-    "    ax2.set_ylabel(r\"Current $I$ in $\\mathrm{\\mu A}$\")\n",
+    "    ax2.set_ylabel(r\"Current $I$ in $\\mathrm{mA}$\")\n",
     "    \n",
     "    ax2.set_title(\"Voltage-Current-Characteristics of an Unknown Resistor\")\n",
     "    \n",
@@ -353,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "4db2d60e-ad01-4c77-b5b6-1026a3757749",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b309c7d43a94375ab2d654cfbddcb35",
+       "model_id": "4a3db43b94754a64a5fd024fe3060999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -368,7 +368,7 @@
        "interactive(children=(IntSlider(value=100, description='I02', max=140, min=-140), IntSlider(value=80, descript…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
