--- a/mech0100_2D_Motion/mech0101_Jump_onto_Platform_V001.ipynb
+++ b/mech0100_2D_Motion/mech0101_Jump_onto_Platform_V001.ipynb
@@ -5,7 +5,7 @@
    "id": "9196122a-65c9-4fa1-8098-2c26f4e5874d",
    "metadata": {},
    "source": [
-    "# A motobike jumps from a ramp onto a platform\n",
+    "# A Motobike Jumps from a Ramp onto a Platform\n",
     "\n",
     "R. Becker, 2022-10-17, V001, CC BY\n"
    ]
@@ -13,6 +13,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "69654da9-fa62-4c7d-94c6-451aeb4028c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23.3\n",
+      "3.6.1\n",
+      "8.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the libs we need later.\n",
+    "import numpy\n",
+    "print(numpy.__version__)\n",
+    "import matplotlib\n",
+    "print(matplotlib.__version__)\n",
+    "import ipywidgets\n",
+    "print(ipywidgets.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "853fb5c9-bb0c-491d-91f1-47fd1815465e",
    "metadata": {},
    "outputs": [],
@@ -147,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b9c15854-78bf-4967-871e-9fb3e3eec75c",
    "metadata": {},
    "outputs": [],
@@ -305,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9e6803ab-9b0b-4e89-b8ca-1e8bbc6063ba",
    "metadata": {},
    "outputs": [],
@@ -324,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a1f8521b-db4f-4394-9a5c-c621e810b6d5",
    "metadata": {},
    "outputs": [
@@ -374,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bcd5de3d-c10d-4573-9020-75f2ad8a842f",
    "metadata": {},
    "outputs": [],
@@ -427,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2e15f083-e156-4ffe-8045-dac33a5eeca1",
    "metadata": {},
    "outputs": [],
@@ -452,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "39fc0838-f912-40b8-b638-59d813a23db3",
    "metadata": {},
    "outputs": [],
@@ -466,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2ba0b4e8-bb6d-4925-b7b5-b5b111484098",
    "metadata": {},
    "outputs": [],
@@ -526,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4a5ba218-7cac-4dec-bcd2-75d9b5e4bb07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30707aecb6444b6e9d61fc0c92e01072",
+       "model_id": "ac6dbf23dea94136bb38176c44af7283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,7 +567,7 @@
        "interactive(children=(FloatSlider(value=15.0, description='v0', max=30.0, min=1.0), FloatSlider(value=30.0, de…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
