--- a/eeng0080_Linear_Equation_Systems/eeng0081_LES_V003_reduced_dev.ipynb
+++ b/eeng0080_Linear_Equation_Systems/eeng0081_LES_V003_reduced_dev.ipynb
@@ -9,15 +9,7 @@
    "source": [
     "# Solving Linear Equation Systems (LES) <br>through Gauß Elimination by Pivoting\n",
     "\n",
-    "This Jupyter Notebook covers:\n",
-    "\n",
-    "1. Automized pretty rendering of vectors and matrixes in markdown language created from Python code \n",
-    "1. The Gauß-Jordan-algorithm to solve linear equation systems by elimination / pivoting\n",
-    "1. The solution of linear equation systems by the use of the inverse matrix\n",
-    "\n",
-    "**Some links on markdown and the generation of markdown code with Python code**\n",
-    "* Learn How to Write Markdown & LaTeX in The Jupyter Notebook<br>https://towardsdatascience.com/write-markdown-latex-in-the-jupyter-notebook-10985edb91fd\n",
-    "* How to programmatically generate markdown output in Jupyter notebooks?<br>https://stackoverflow.com/questions/36288670/how-to-programmatically-generate-markdown-output-in-jupyter-notebooks\n",
+    "**SHORT (REDUCED) VERSION. THERE IS A NORE ELABORATED VERSION IN THE SAME FOLDER.**\n",
     "\n",
     "**Preparation**\n",
     "\n",
@@ -38,169 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dc7260eb-4366-4c02-96c1-76ec610943cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from IPython.display import display, Markdown, Latex, Math"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab771ee5-0ac2-458a-874b-81ec24d6ecd9",
-   "metadata": {},
-   "source": [
-    "## Sidenote: Equations in Markdown Language"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b9631f8-8779-4ae4-8f56-b105fadd8399",
-   "metadata": {},
-   "source": [
-    "The following manual markdown code displays a matrix:\n",
-    "```\n",
-    "$\n",
-    "\\begin{pmatrix}\n",
-    "1 & 2 & 3\\\\\n",
-    "a & b & c\n",
-    "\\end{pmatrix}\n",
-    "$\n",
-    "```\n",
-    "\n",
-    "The rendered result:\n",
-    "\n",
-    "$\n",
-    "\\begin{pmatrix}\n",
-    "1 & 2 & 3\\\\\n",
-    "a & b & c\n",
-    "\\end{pmatrix}\n",
-    "$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "802dcda7-1348-4111-83f5-6334c2e93258",
-   "metadata": {},
-   "source": [
-    "**Markdown output can be created by Python code!**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d70689b5-af68-4739-a855-d38271df5d1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "some markdown $\\phi$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "*some markdown* $\\phi$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**some markdown** $\\phi$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(Markdown('some markdown $\\phi$'))\n",
-    "display(Markdown('*some markdown* $\\phi$'))\n",
-    "display(Markdown('**some markdown** $\\phi$'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a4890725-6287-4f8c-bdc9-4d714caf6638",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The raw MD string (LaTeX / MathJax syntax):\n",
-      "$\\begin{pmatrix}1 & 2 & 3\\\\a & b & c\\end{pmatrix}$\n",
-      "\n",
-      "Rendered:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "$\\begin{pmatrix}1 & 2 & 3\\\\a & b & c\\end{pmatrix}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "s = r\"1 & 2 & 3\\\\a & b & c\"\n",
-    "\n",
-    "sp = r\"$\\begin{pmatrix}\" + s + r\"\\end{pmatrix}$\"\n",
-    "\n",
-    "print(\"The raw MD string (LaTeX / MathJax syntax):\")\n",
-    "\n",
-    "print(sp)\n",
-    "print()\n",
-    "\n",
-    "print(\"Rendered:\")\n",
-    "display(Markdown(sp))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c3625e54-559e-42a9-9650-79c342258cc3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle F(k) = \\int_{-\\infty}^{\\infty} f(x) e^{2\\pi i k} dx$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(Math(r'F(k) = \\int_{-\\infty}^{\\infty} f(x) e^{2\\pi i k} dx'))"
    ]
   },
   {
@@ -275,24 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d32b21a8-b5f3-45e9-9b01-ac3ecb0c1970",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A matrix is an array of rows, which are arrays. Thus a matrix is a two dimensional array.\n",
-    "# The numpy.array() function is used to create 2D array (aka matrix) from a list of row lists.\n",
-    "M = np.array(\n",
-    "    [\n",
-    "        [-1.0, -1, 1, 0],\n",
-    "        [-6, 3, 0, -24],\n",
-    "        [0, -3, -6, -12]\n",
-    "    ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "70d38626-9720-454f-9c43-5dec0e4984d5",
    "metadata": {},
    "outputs": [],
@@ -309,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "965e1bed-3f77-4364-904c-649c4e0ba764",
    "metadata": {},
    "outputs": [
@@ -321,7 +140,7 @@
        "       [  0.,  -3.,  -6., -12.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "77dba2ae-847f-4fdf-a935-b836a4479c19",
    "metadata": {},
    "outputs": [
@@ -364,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "eded46e9-80f8-489e-acfc-6ab61881bf46",
    "metadata": {},
    "outputs": [],
@@ -402,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8f561f21-86ae-4128-8bc2-f22c7da79d72",
    "metadata": {},
    "outputs": [
@@ -435,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "9dd5ea2f-81b6-4426-89c7-c9c1df5fe776",
    "metadata": {},
    "outputs": [
@@ -536,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb242477-2257-4309-878f-2eec80f6ced3",
+   "id": "1332abe0-13df-499a-9087-cd4fed550f44",
    "metadata": {},
    "source": [
     "### Nice Vector Rendering in Markdown ###"
@@ -544,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2ff400b7-90c5-4585-abca-938691500110",
    "metadata": {},
    "outputs": [],
@@ -582,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ed417480-9622-49cb-a9ae-ff623656a974",
    "metadata": {},
    "outputs": [
@@ -615,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "3fc29d1e-68ee-465e-bb04-e63fcc2f14f9",
    "metadata": {},
    "outputs": [],
@@ -655,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "47d66fc6-9d9a-4473-b351-bf4844e99720",
    "metadata": {},
    "outputs": [
@@ -717,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4dee78e7-65dd-4782-b149-0027ea23b48d",
    "metadata": {},
    "outputs": [
@@ -816,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "ebb1fdf3-531c-4fc7-b82b-7f3d442b71ce",
    "metadata": {},
    "outputs": [
@@ -835,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "d5bc78df-f400-41de-a0be-7ebaa4daf02f",
    "metadata": {},
    "outputs": [
@@ -854,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "c66ab082-278c-43ae-972f-73501ae5711c",
    "metadata": {},
    "outputs": [
@@ -873,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "93c7f7d2-2b95-43ce-9404-7dd463ef2955",
    "metadata": {},
    "outputs": [
@@ -892,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "7bfb8f02-ba94-459d-844c-58052bfe1b3f",
    "metadata": {},
    "outputs": [
@@ -911,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "ee11aff8-7011-4426-a3b5-30580e08f8d3",
    "metadata": {},
    "outputs": [
@@ -930,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "c1d6c79a-a55e-4c58-abaa-30a997d63710",
    "metadata": {},
    "outputs": [
@@ -969,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "id": "62090051-db00-43f2-b940-88fc7451c442",
    "metadata": {
     "tags": []
@@ -1021,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "id": "d4dced9c-283e-43b5-9d41-0a917ea9ffa5",
    "metadata": {},
    "outputs": [
@@ -1065,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "id": "a5e33cbd-48e3-4b8d-bee5-81c3c710f015",
    "metadata": {
     "tags": []
@@ -1090,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "36c2f1ac-337a-4211-97b0-6bdd0996698a",
    "metadata": {},
    "outputs": [
@@ -1114,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "id": "6c39d3f1-e548-404f-9b41-dbcf46e5b6cc",
    "metadata": {},
    "outputs": [
@@ -1138,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "id": "017e1e50-a78c-4487-a07a-cef142b6a2c9",
    "metadata": {},
    "outputs": [
@@ -1170,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "f4ccef67-39b9-4d4f-a324-1ec42173f58d",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "e6c1306d-7db7-4091-a2ff-acef90d30ce0",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "1f6ed741-606e-422d-a1ab-c8758a9e3cd9",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "id": "e0e8e6b5-13b8-4cf5-b6ff-fde0f849727a",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "id": "1f4e8c3d-54c3-454a-b2f5-7541a153c21b",
    "metadata": {
     "tags": []
@@ -1297,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "id": "1e7e5381-f311-497b-a203-a5d35dc954b4",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "d751d0f8-1901-446c-bc70-e7c651907edf",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "id": "1dd643d8-b8a6-477e-8006-e3ca68b3f250",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "id": "0fc5c47d-76dc-4d32-8e1e-a6638637d740",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "id": "452fc10b-12b3-4bdb-9ed8-ca92f76cb6dd",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "id": "248dd474-11a0-4017-a4b6-0e281becc862",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "id": "ab7245d5-bcde-43bf-ad1f-15107a5a722e",
    "metadata": {},
    "outputs": [],
@@ -1583,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "ce14480e-abab-4abd-89d9-bce7c0008b74",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 52,
    "id": "705cd8b0-b024-4c45-abc7-a12822b69fd7",
    "metadata": {},
    "outputs": [
@@ -1634,10 +1453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The resulting currents are:\n",
-      "I[0] = +3.50A\n",
-      "I[1] = -1.00A\n",
-      "I[2] = +2.50A\n"
+      "[ 3.5 -1.   2.5]\n"
      ]
     }
    ],
@@ -1662,63 +1478,13 @@
     "I = Rinv.dot(V)\n",
     "\n",
     "# Print currents\n",
-    "print(\"The resulting currents are:\")\n",
-    "for k in range(3):\n",
-    "    print(f\"I[{k:d}] = {I[k]:+.2f}A\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "05ca2440-208d-4e5e-9484-cb08f0e8f559",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ -1.,  -1.,   1.,   0.],\n",
-       "       [ -6.,   3.,   0., -24.],\n",
-       "       [  0.,  -3.,  -6., -12.]])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# another piece of code to merge matrix and vector\n",
-    "MM = np.c_[R,V]\n",
-    "MM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "adf317cb-c3eb-495b-83fe-6df70642f9d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ -1.,  -1.,   1.,   0.],\n",
-       "       [ -6.,   3.,   0., -24.],\n",
-       "       [  0.,  -3.,  -6., -12.]])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MM"
+    "print(I)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc714238-125c-4590-a11b-d3fceab6820a",
+   "id": "ac7a8596-42b8-4442-87bf-a43037540553",
    "metadata": {},
    "outputs": [],
    "source": []
