--- a/eeng0300_Capacitors/Python/eeng0301_Capacitor_V001_soln.ipynb
+++ b/eeng0300_Capacitors/Python/eeng0301_Capacitor_V001_soln.ipynb
@@ -510,11 +510,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "333f99b2-198f-4df5-9bcf-a67528cbf1b7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VC1 = 3.161V\n"
+     ]
+    }
+   ],
+   "source": [
+    "VS = 5\n",
+    "VC0 = 0.\n",
+    "t1 = 1.\n",
+    "VC1 = V_charge(t1,VS,R,C)\n",
+    "print(f\"{VC1 = :.3f}V\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3f427f3b-6188-4ee1-ab25-be99db5b16c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VC2 = 0.428V\n"
+     ]
+    }
+   ],
+   "source": [
+    "t2 = 2.\n",
+    "VC2 = V_discharge(t2,VC1,R,C)\n",
+    "print(f\"{VC2 = :.3f}V\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "292c1be4-b88e-4b0f-95da-dcbd7efc3552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VC3 = 3.318V\n"
+     ]
+    }
+   ],
+   "source": [
+    "t3 = 1.\n",
+    "VC3 = V_charge(t1,VS-VC2,R,C)+VC2\n",
+    "print(f\"{VC3 = :.3f}V\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03fd0a0e-a4ed-4827-b5db-535fe8940916",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t4 = 2.\n",
+    "VC4 = V_discharge(t3,VC1,R,C)\n",
+    "print(f\"{VC2 = :.3f}V\")"
+   ]
   }
  ],
  "metadata": {
