--- a/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
+++ b/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
@@ -9,12 +9,14 @@
    "source": [
     "# Exercises on Complex Electrical Impedance\n",
     "\n",
+    "The complex impedance reads:\n",
+    "\n",
     "$$\n",
     "Z = R + iX\n",
     "$$\n",
     "\n",
-    "  * Resistance $R$ is the real part of complex impedance $Z$\n",
-    "  * Reactance $X$ is the imaginary part of complex impedance $Z$\n",
+    "* Resistance $R$ is the real part of complex impedance $Z$\n",
+    "* Reactance $X$ is the imaginary part of complex impedance $Z$\n",
     "  \n",
     "Further information on Wikipedia: https://en.wikipedia.org/wiki/Electrical_impedance"
    ]
@@ -52,13 +54,13 @@
     "**Exercise 1:**\n",
     "<br>\n",
     "Draw the following complex numbers of the form $z = a+ib$ in the complex plane with Cartesian coordinates with $x$-axis the real and $y$-axis the imaginary part:\n",
-    "  * $z_1 = \\frac{\\sqrt{2}}{2}\\left(1+i \\right)$\n",
-    "  * $z_2 = \\frac{\\sqrt{2}}{2}\\left(-1+i \\right)$\n",
-    "  * $z_3 = i$\n",
-    "  * $z_4 = -i$  \n",
-    "  * $z_5 = \\sqrt{2}\\left(-1-i \\right)$\n",
-    "  * $z_6 = 4+3i$\n",
-    "  * $z_7 = 3-4i$\n"
+    "* $z_1 = \\frac{\\sqrt{2}}{2}\\left(1+i \\right)$\n",
+    "* $z_2 = \\frac{\\sqrt{2}}{2}\\left(-1+i \\right)$\n",
+    "* $z_3 = i$\n",
+    "* $z_4 = -i$  \n",
+    "* $z_5 = \\sqrt{2}\\left(-1-i \\right)$\n",
+    "* $z_6 = 4+3i$\n",
+    "* $z_7 = 3-4i$\n"
    ]
   },
   {
@@ -79,11 +81,11 @@
     "**Exercise 3:**\n",
     "<br>\n",
     "Calculate the following products in Euler as well as Cartesian notation and draw them in the diagram:\n",
-    "  * $z_8 = z_6 \\cdot z_3$\n",
-    "  * $z_9 = z_6 \\cdot z_4$\n",
-    "  * $z_{10} = z_1 \\cdot z_1$\n",
-    "  * $z_{11} = z_1 \\cdot z_1 \\cdot z_1$\n",
-    "  * $z_{12} = z_1^4$  "
+    "* $z_8 = z_6 \\cdot z_3$\n",
+    "* $z_9 = z_6 \\cdot z_4$\n",
+    "* $z_{10} = z_1 \\cdot z_1$\n",
+    "* $z_{11} = z_1 \\cdot z_1 \\cdot z_1$\n",
+    "* $z_{12} = z_1^4$  "
    ]
   },
   {
@@ -144,9 +146,9 @@
     "**Ex. 6.3:**\n",
     "<br>\n",
     "The following values are given:\n",
-    "  * $C=1\\mathrm{\\mu F}$\n",
-    "  * $V_0=100\\mathrm{V}$\n",
-    "  * $f_1=1\\mathrm{Hz}$, $f_2=2\\mathrm{Hz}$\n",
+    "* $C=1\\mathrm{\\mu F}$\n",
+    "* $V_0=100\\mathrm{V}$\n",
+    "* $f_1=1\\mathrm{Hz}$, $f_2=2\\mathrm{Hz}$\n",
     "  \n",
     "Determine the angular frequencies $\\omega_1$ and $\\omega_2$ according to $f_1$ and $f_2$, respectively.\n",
     "\n",
