--- a/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
+++ b/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
@@ -15,8 +15,8 @@
     "Z = R + iX\n",
     "$$\n",
     "\n",
-    "* Resistance $R$ is the real part of complex impedance $Z$\n",
-    "* Reactance $X$ is the imaginary part of complex impedance $Z$\n",
+    "* The resistance $R$ is the real part of complex impedance $Z$\n",
+    "* The reactance $X$ is the imaginary part of complex impedance $Z$\n",
     "  \n",
     "Further information on Wikipedia: https://en.wikipedia.org/wiki/Electrical_impedance"
    ]
