--- a/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
+++ b/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "**Exercise 1:**\n",
-    "<br>\n",
+    "\n",
     "Draw the following complex numbers of the form $z = a+ib$ in the complex plane with Cartesian coordinates with $x$-axis the real and $y$-axis the imaginary part:\n",
     "* $z_1 = \\frac{\\sqrt{2}}{2}\\left(1+i \\right)$\n",
     "* $z_2 = \\frac{\\sqrt{2}}{2}\\left(-1+i \\right)$\n",
@@ -69,7 +69,7 @@
    "metadata": {},
    "source": [
     "**Exercise 2:**\n",
-    "<br>\n",
+    "\n",
     "Convert the the above complex numbers to Euler notation: $z = |z|e^{i\\phi}$"
    ]
   },
@@ -78,8 +78,7 @@
    "id": "b094eddc-97b8-4326-b02e-ffb12e394e8a",
    "metadata": {},
    "source": [
-    "**Exercise 3:**\n",
-    "<br>\n",
+    "**Exercise 3:** <br>\n",
     "Calculate the following products in Euler as well as Cartesian notation and draw them in the diagram:\n",
     "* $z_8 = z_6 \\cdot z_3$\n",
     "* $z_9 = z_6 \\cdot z_4$\n",
