--- a/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
+++ b/eeng0400_Complex_Numbers/Exercises_Complex_p01.ipynb
@@ -51,8 +51,7 @@
    "id": "ebd78d92-b602-4463-b4d3-83cab536a8ff",
    "metadata": {},
    "source": [
-    "**Exercise 1:**\n",
-    "\n",
+    "**Exercise 1:**<br>\n",
     "Draw the following complex numbers of the form $z = a+ib$ in the complex plane with Cartesian coordinates with $x$-axis the real and $y$-axis the imaginary part:\n",
     "* $z_1 = \\frac{\\sqrt{2}}{2}\\left(1+i \\right)$\n",
     "* $z_2 = \\frac{\\sqrt{2}}{2}\\left(-1+i \\right)$\n",
@@ -68,8 +67,7 @@
    "id": "6d85c04e-9e97-4b7e-9345-2e416cd96ffc",
    "metadata": {},
    "source": [
-    "**Exercise 2:**\n",
-    "\n",
+    "**Exercise 2:**<br>\n",
     "Convert the the above complex numbers to Euler notation: $z = |z|e^{i\\phi}$"
    ]
   },
@@ -92,8 +90,7 @@
    "id": "36691e03-b428-4904-90de-4a8ec8285f56",
    "metadata": {},
    "source": [
-    "**Exercise 4:**\n",
-    "<br>\n",
+    "**Exercise 4:**<br>\n",
     "Two complex numbers are given: $z_{13}=e^{\\pi/4}$ and $z_{14}=e^{3\\pi/4}$. Calculate $z_{15} = z_{13}-z_{14}$. Hint: Consider to transform to Cartesian representation with explicit real and imaginary part."
    ]
   },
@@ -102,8 +99,7 @@
    "id": "c434c191-76ec-4885-9083-cfa8a052ca65",
    "metadata": {},
    "source": [
-    "**Exercise 5:**\n",
-    "<br>\n",
+    "**Exercise 5:**<br>\n",
     "The imaginary unit $i$ has this fundamental property: $i^2 = -1$. Show that $\\frac{1}{i} = -i$.\n"
    ]
   },
@@ -112,8 +108,7 @@
    "id": "01e5a1df-ec74-4e50-9154-1cb901e95d55",
    "metadata": {},
    "source": [
-    "**Exercise 6:**\n",
-    "<br>\n",
+    "**Exercise 6:**<br>\n",
     "The complex reactance of a capacitor is $X_C = \\frac{1}{i\\omega C}$. The total complex impedance of an ideal capacitor (with internal resistance $R = 0 \\Omega$) is: \n",
     "\n",
     "$\n",
@@ -134,16 +129,13 @@
     "\n",
     "All factors in front of the exponential function are summarized in one factor $I_0$. This current amplitude factor is dependent on the frequency of the oscillation.\n",
     "\n",
-    "**Ex. 6.1:**\n",
-    "<br>\n",
+    "**Ex. 6.1:**<br>\n",
     "Write down the amplitude $I_0$ as a function of $\\omega$ and other factors.\n",
     "\n",
-    "**Ex. 6.2:**\n",
-    "<br>\n",
+    "**Ex. 6.2:**<br>\n",
     "How large is the phase shift $\\phi$?\n",
     "\n",
-    "**Ex. 6.3:**\n",
-    "<br>\n",
+    "**Ex. 6.3:**<br>\n",
     "The following values are given:\n",
     "* $C=1\\mathrm{\\mu F}$\n",
     "* $V_0=100\\mathrm{V}$\n",
@@ -160,8 +152,7 @@
    "id": "c1ffe980-75c3-48c5-8d5b-15732d490fc4",
    "metadata": {},
    "source": [
-    "**Exercise 7:**\n",
-    "<br>\n",
+    "**Exercise 7:**<br>\n",
     "Control your results of Exercise 6 with **LTspice**."
    ]
   },
