--- a/eeng0700_Photovoltaics/Python/eeng0201_PV_Cell_Model_V002.ipynb
+++ b/eeng0700_Photovoltaics/Python/eeng0201_PV_Cell_Model_V002.ipynb
@@ -61,7 +61,7 @@
     "I_\\mathrm{ph} - I_{D_1} - I_{D_2} - I_{R_P} - I = 0\n",
     "$\n",
     "\n",
-    "The single diode model used is:\n",
+    "The single Shockley diode model used is:\n",
     "\n",
     "$\n",
     "I_D(V_D) = I_s \\left(e^{V_D/(m V_T)} -1 \\right)\n",
@@ -70,12 +70,38 @@
     "with parameters:\n",
     "* $V_D$: voltage across diode, forward or reverse bias or 0V\n",
     "* $I_s$: saturation current, leaking current in reverse bias \n",
-    "* $m$: shape parameter, determines how fast the exponential grows\n",
+    "* $m$: shape parameter, determines how fast the exponential grows (aka ideality factor)\n",
     "* $V_T$: temperature dependent voltage parameter, $eV_T = kT$\n",
     "\n",
     "The current flowing through the resistor $R_P$ is also dependent on $V_D$:\n",
     "\n",
     "$\n",
+    "I_{R_P} = V_D/R_P\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2582885d-7f33-4d92-8fe5-f24a4dd8ac28",
+   "metadata": {},
+   "source": [
+    "### Characteristic V-I-Curve of a PV Cell\n",
+    "\n",
+    "The question is: **What is $I(V)$?**\n",
+    "\n",
+    "Move $I$ to the left side and substitute the functions:\n",
+    "\n",
+    "\n",
+    "$\n",
+    "I = I_\\mathrm{ph}(E) - I_{D_1}(V) - I_{D_2}(V) - I_{R_P}(V)\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "I = \n",
+    "c_0 E + \n",
+    "I_{s_1} \\left(e^{\\frac{[V - R_S I]}{m_1 V_T}} -1 \\right) +\n",
+    "I_{s_2} \\left(e^{\\frac{[V - R_S I]}{m_2 V_T}} -1 \\right) +\n",
+    "\\frac{[V - R_S I]}{R_P}\n",
     "$"
    ]
   },
@@ -94,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "a89acdb9-4091-4786-b6b8-c3cab8750614",
    "metadata": {},
    "outputs": [
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "id": "b139e47d-7319-4ace-9006-0688b166526e",
    "metadata": {},
    "outputs": [],
@@ -144,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "id": "b751f1b7-4879-47b7-888d-805a703219c7",
    "metadata": {},
    "outputs": [],
@@ -162,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "id": "023e8374-7d3b-4a91-be9c-b4cae10aaa16",
    "metadata": {},
    "outputs": [],
@@ -173,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 6,
    "id": "3b576a84-336b-4665-a8a6-df0b0e13b645",
    "metadata": {},
    "outputs": [
@@ -228,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 7,
    "id": "e7981d66-dd1b-4b11-a5f0-a5a74f969e5e",
    "metadata": {},
    "outputs": [],
@@ -242,6 +268,7 @@
     "\n",
     "    Iph=c0*E\n",
     "    VT=k*T/e\n",
+    "    \n",
     "    VD=V+I*Rs\n",
     "\n",
     "    error = Iph - ID(VD,Is1,m1,T) - ID(VD,Is2,m2,T) - VD/Rp - I\n",
@@ -261,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 8,
    "id": "47cf945e-8d49-4502-8c1e-654550aeca67",
    "metadata": {},
    "outputs": [],
@@ -272,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "id": "fb55a40c-5e6e-4265-8eca-01b69a8dee67",
    "metadata": {},
    "outputs": [
@@ -293,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 10,
    "id": "93073dbe-8656-4249-ac35-5ec4b2440c2d",
    "metadata": {},
    "outputs": [
@@ -314,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 11,
    "id": "7ac8e951-f131-4fb6-a313-2e7f4406966c",
    "metadata": {},
    "outputs": [
@@ -346,12 +373,12 @@
    "id": "38906f1d-edcf-43f5-b5ff-bdfcebfecdee",
    "metadata": {},
    "source": [
-    "## Apply the Netwon Method"
+    "## Apply the Newton Method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 12,
    "id": "83e52ab8-f8cc-4afc-8634-1c007e830516",
    "metadata": {
     "tags": []
@@ -545,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 13,
    "id": "659ab64f-6833-44fa-a4ee-69016f7c2a1f",
    "metadata": {},
    "outputs": [],
@@ -555,18 +582,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 19,
    "id": "86cce9fe-0fc1-40ad-9090-0936e7e7b1f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set initial currents (first guess) all to 2 (random guess)\n",
-    "Iguess=np.zeros(V.shape)+2"
+    "Iguess=np.ones(V.shape)*2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 20,
    "id": "90322b53-a98a-4ca1-af31-518d301f94a9",
    "metadata": {},
    "outputs": [],
@@ -577,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 21,
    "id": "8144740d-ab51-4682-95ab-910612af0498",
    "metadata": {},
    "outputs": [],
@@ -588,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 22,
    "id": "58a96cf4-4761-47f1-b6a2-570f45d937a3",
    "metadata": {},
    "outputs": [
@@ -639,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 23,
    "id": "4e5d63dd-e336-4f2e-babb-c989bf3a3839",
    "metadata": {},
    "outputs": [
@@ -666,17 +693,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7c47a196-0321-47df-bbf2-edb0f6050580",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c94ed14-a7ed-4a52-8380-9e3f47e25a06",
    "metadata": {},
-   "source": [
-    "## Diode Characteristic Curve"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33378543-dd05-49a0-a988-9fbb4a50d5e4",
+   "id": "5735d1cf-1fa1-458c-8bc0-acd160233c14",
    "metadata": {},
    "outputs": [],
    "source": []
