--- a/eeng0500_RC_Reactance_Impedance/RC_Reactance_Impedance_V002.ipynb
+++ b/eeng0500_RC_Reactance_Impedance/RC_Reactance_Impedance_V002.ipynb
@@ -80,7 +80,8 @@
     "$$\n",
     "\\bbox[15px, border: 2px solid black]\n",
     "{\n",
-    "I_C(t) = \\omega C V_0\\,e^{\\mathrm{i} ( \\omega t+\\pi/2 ) } = I_{C,0}(\\omega,C)\\,e^{i\\left(\\omega t+\\pi/2\\right)}\n",
+    "I_C(t) = \\omega C V_0\\,e^{\\mathrm{i} ( \\omega t+\\pi/2 ) } \n",
+    "= I_{C,0}(\\omega,C)\\,e^{i\\left(\\omega t+\\pi/2\\right)}\n",
     "}\n",
     "$$\n",
     "\n",
@@ -436,7 +437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e7fbf01d675417db08dce3d25c4027a",
+       "model_id": "2d53bdef1f244500b87e9f987f965fcc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -628,7 +629,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e65fb1e681d443b9869626b4f17cb2a",
+       "model_id": "cf30947c15c7433284d7487c66511420",
        "version_major": 2,
        "version_minor": 0
       },
@@ -668,6 +669,14 @@
    "metadata": {},
    "source": [
     "## RC Circuit: Voltage Divider, Low-Pass Filter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86403375-4197-4186-b28b-596b55b300ab",
+   "metadata": {},
+   "source": [
+    "<img src=\"./images/RC_circuit_manual_drawing_250k.jpg\" width=300/>"
    ]
   },
   {
@@ -863,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "771059ad-eb3d-4c46-a9b6-8496e71e0547",
    "metadata": {
     "tags": []
@@ -875,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "3473f9cb-0f03-4bd8-b934-b5f63ddf0c00",
    "metadata": {},
    "outputs": [],
@@ -889,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "9f798e30-9bcd-45bd-8e8e-cf389c8ec585",
    "metadata": {},
    "outputs": [
@@ -934,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "ff7950b9-7b00-4320-b23e-01c73a1c3d9f",
    "metadata": {},
    "outputs": [
@@ -944,7 +953,7 @@
        "15.915494309189533"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "368ef888-a360-4553-866c-07d9b6a30526",
    "metadata": {},
    "outputs": [
@@ -965,7 +974,7 @@
        "-0.9999999999999999"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
