--- a/eeng0700_Photovoltaics/Python/eeng0201_PV_Cell_Model_V002.ipynb
+++ b/eeng0700_Photovoltaics/Python/eeng0201_PV_Cell_Model_V002.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "The voltage $V_D$ across the diodes $D_1$ and $D_2$ and the parallel resistance $R_P$ (at the node where these components join) is: \n",
     "\n",
-    "$V_D = V - R_S I$\n",
+    "$V_D = V + R_S I$\n",
     "\n",
     "The voltage $V_D$ depends also on $I$. \n",
     "\n",
@@ -93,21 +93,34 @@
     "\n",
     "\n",
     "$\n",
-    "I = I_\\mathrm{ph}(E) - I_{D_1}(V) - I_{D_2}(V) - I_{R_P}(V)\n",
+    "I = I_\\mathrm{ph}(E) - I_{D_1}(V,I) - I_{D_2}(V,I) - I_{R_P}(V,I)\n",
     "$\n",
+    "\n",
+    "$\n",
+    "0 = I_\\mathrm{ph}(E) - I_{D_1}(V,I) - I_{D_2}(V,I) - I_{R_P}(V,I) - I\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "\\mathrm{err} = I_\\mathrm{ph}(E) - I_{D_1}(V,I) - I_{D_2}(V,I) - I_{R_P}(V,I) - I\n",
+    "$\n",
+    "\n",
+    "\n",
     "\n",
     "$\n",
     "I = \n",
     "c_0 E + \n",
-    "I_{s_1} \\left(e^{\\frac{[V - R_S I]}{m_1 V_T}} -1 \\right) +\n",
-    "I_{s_2} \\left(e^{\\frac{[V - R_S I]}{m_2 V_T}} -1 \\right) +\n",
-    "\\frac{[V - R_S I]}{R_P}\n",
+    "I_{s_1} \\left(e^{\\frac{[V + R_S I]}{m_1 V_T}} -1 \\right) +\n",
+    "I_{s_2} \\left(e^{\\frac{[V + R_S I]}{m_2 V_T}} -1 \\right) +\n",
+    "\\frac{[V + R_S I]}{R_P}\n",
+    "$\n",
+    "\n",
+    "$I(V) = ???\n",
     "$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "56a8ffed-90c3-46c2-a012-cde327118a7e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "a89acdb9-4091-4786-b6b8-c3cab8750614",
    "metadata": {},
    "outputs": [
@@ -155,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "b139e47d-7319-4ace-9006-0688b166526e",
    "metadata": {},
    "outputs": [],
@@ -170,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "b751f1b7-4879-47b7-888d-805a703219c7",
    "metadata": {},
    "outputs": [],
@@ -188,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "023e8374-7d3b-4a91-be9c-b4cae10aaa16",
    "metadata": {},
    "outputs": [],
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "3b576a84-336b-4665-a8a6-df0b0e13b645",
    "metadata": {},
    "outputs": [
@@ -254,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "e7981d66-dd1b-4b11-a5f0-a5a74f969e5e",
    "metadata": {},
    "outputs": [],
@@ -288,18 +301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "47cf945e-8d49-4502-8c1e-654550aeca67",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set example voltage:\n",
-    "V = 0.4"
+    "V = 0.4 #V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "fb55a40c-5e6e-4265-8eca-01b69a8dee67",
    "metadata": {},
    "outputs": [
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "93073dbe-8656-4249-ac35-5ec4b2440c2d",
    "metadata": {},
    "outputs": [
@@ -341,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "7ac8e951-f131-4fb6-a313-2e7f4406966c",
    "metadata": {},
    "outputs": [
